// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages should add data to the tree 1`] = `
Object {
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 2`] = `
Object {
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Support",
          ],
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Messages should add data to the tree 3`] = `
Object {
  "bot-development": Object {
    "!otherTrigger": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Developer",
          ],
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!otherTrigger",
        },
      },
    ],
  },
  "bot-output": Object {
    "!test": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Support",
          ],
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!test",
        },
      },
    ],
  },
  "bot-test-channel": Object {
    "!otherTrigger": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Developer",
          ],
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "event": "MESSAGE",
          "trigger": "!otherTrigger",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Messages should extract messages from direct message 1`] = `
Object {
  "handlerKeys": Array [
    "channel-id",
    "this",
  ],
  "isDirectMessage": true,
  "member": Object {
    "deleted": false,
    "displayName": "user username",
    "guildID": "guild-id",
    "joinedTimestamp": null,
    "lastMessageChannelID": null,
    "nickname": null,
    "premiumSinceTimestamp": null,
    "userID": "222222222222222200",
  },
}
`;

exports[`Messages should extract messages from public channel 1`] = `
Object {
  "handlerKeys": Array [
    "guild-channel",
    "this",
  ],
  "isDirectMessage": false,
  "member": Object {
    "deleted": false,
    "displayName": "user username",
    "guildID": "guild-id",
    "joinedTimestamp": null,
    "lastMessageChannelID": null,
    "nickname": null,
    "premiumSinceTimestamp": null,
    "userID": "222222222222222200",
  },
}
`;
